# course-project-1.3

./: .gitignore  Banks.csv  Borders.csv  CMakeLists.txt  Commissions.csv  README.md  kyr.cpp  main.cpp
docs/: Документация по тестированию.docx  Пользовательская документация.docx  Техническая документация.docx
